--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://pyohgeun.github.io/fc_test"
+  "homepage": "https://pyohgeun.github.io/"
 }
